--- a/rest-express/package.json
+++ b/rest-express/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@prisma/client": "4.4.0",
     "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "4.18.1",
     "yarn": "^1.22.19"
