--- a/rest-express/package.json
+++ b/rest-express/package.json
@@ -6,7 +6,7 @@
     "dev": "ts-node src/index.ts"
   },
   "dependencies": {
-    "@prisma/client": "4.4.0",
+    "@prisma/client": "^4.9.0",
     "cors": "^2.8.5",
     "express": "4.18.1",
     "yarn": "^1.22.19"
@@ -15,7 +15,7 @@
     "@types/express": "4.17.14",
     "@types/express-session": "^1.17.5",
     "@types/node": "16.11.64",
-    "prisma": "4.4.0",
+    "prisma": "^4.9.0",
     "ts-node": "10.9.1",
     "typescript": "4.8.4"
   },
