--- a/rest-express/package.json
+++ b/rest-express/package.json
@@ -11,7 +11,13 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "4.18.1",
-    "yarn": "^1.22.19"
+    "yarn": "^1.22.19",
+    "ts-node": "10.9.1",
+    "typescript": "4.8.4",
+    "@types/express": "4.17.14",
+    "@types/express-session": "^1.17.5",
+    "@types/node": "16.11.64",
+    "prisma": "4.4.0"
   },
   "devDependencies": {
     "@types/express": "4.17.14",
